--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "dependencies": {
     "cheerio": "1.0.0-rc.6",
-    "url-parse": "1.5.1",
-    "request": "2.88.2"
+    "request": "2.88.2",
+    "url-parse": "1.5.1"
   }
 }
