--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   ],
   "dependencies": {
     "cheerio": "1.0.0-rc.6",
+    "puppeteer": "^9.0.0",
+    "puppeteer-core": "^9.0.0",
     "request": "2.88.2",
     "url-parse": "1.5.1"
   }
