--- a/package.json
+++ b/package.json
@@ -9,10 +9,26 @@
     "Mathieu PHERON"
   ],
   "dependencies": {
-    "cheerio": "1.0.0-rc.6",
+    "cheerio": "^1.0.0-rc.6",
+    "node-fetch": "^2.6.1",
     "puppeteer": "^9.0.0",
     "puppeteer-core": "^9.0.0",
     "request": "2.88.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4",
     "url-parse": "1.5.1"
-  }
+  },
+  "description": "",
+  "scripts": {
+    "start": "ts-node src/index.ts",
+
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://git.ytrack.learn.ynov.com/MPHERON/web-crawler"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
