--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "typescript": "^4.2.4"
   },
   "description": "",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"scripts": {
+"dev": "react-scripts start",
+"start": "serve -s build",
+"build": "react-scripts build",
+"test": "react-scripts test --env=jsdom",
+"eject": "react-scripts eject",
+"heroku-postbuild": "npm run build"
+},
 
   "repository": {
     "type": "git",
